<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">

    <!-- Splash -->
    <string name="ver_name">1.0</string>
    <string name="ver_name2">ver. 1.0</string>
    <string name="app_name">Amuzicg</string>
    <string name="free_version">Free Version</string>
    <string name="pro_version">Pro Version</string>
    <string name="version">Version: %s</string>
    <string name="rta_dialog_title">Rate this app</string>
    <string name="rta_dialog_message">If you like this app, please take a moment to rate it. It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_cancel">Remind later</string>
    <string name="rta_dialog_no">No, thanks</string>
    <string name="downloadPro_dialog_title">Remove Ads?</string>
    <string name="downloadPro_dialog_message">Do you enjoy this app?Would you like to remove ads?</string>
    <string name="downloadPro_dialog_ok">Download Now</string>
    <string name="downloadPro_dialog_cancel">Remind later</string>
    <string name="downloadPro_dialog_no">No, thanks</string>
    <string name="empty"></string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="effect_control">Effect State</string>
    <string name="equalizer_save_setting">Save Setting</string>
    <string name="effect_release">Effect Instantiated</string>
    <string name="effect_bypass">Bypass</string>
    <string name="envreverb_test_name">Environmental Reverb Test</string>
    <string name="rvb_param_1_name">Room Level</string>
    <string name="rvb_param_2_name">Room HF Level</string>
    <string name="rvb_param_3_name">Decay Time</string>
    <string name="rvb_param_4_name">Decay HF Ratio</string>
    <string name="rvb_param_5_name">Reflections Level</string>
    <string name="rvb_param_6_name">Reflections Delay</string>
    <string name="rvb_param_7_name">Reverb Level</string>
    <string name="rvb_param_8_name">Reverb Delay</string>
    <string name="rvb_param_9_name">Diffusion</string>
    <string name="rvb_param_10_name">Density</string>
    <string name="presetrvb_test_name">Preset Reverb Test</string>
    <string name="presetrvb_param_1_name">Presets</string>
    <string name="equalizer_test_name">Equalizer Test</string>
    <string name="session">Audio Session</string>
    <string name="eq_param_1_name">Band 1 Level</string>
    <string name="eq_param_2_name">Band 2 Level</string>
    <string name="eq_param_3_name">Band 3 Level</string>
    <string name="eq_param_4_name">Band 4 Level</string>
    <string name="eq_param_5_name">Band 5 Level</string>
    <string name="eq_param_6_name">Presets</string>
    <string name="virtualizer_test_name">Virtualizer Test</string>
    <string name="stength_name">Strength</string>
    <string name="bassboost_test_name">Bass Boost Test</string>
    <string name="visualizer_test_name">Visualizer Test</string>
    <string name="visu_callback">Callback Mode</string>
    <string name="waveform_name">PCM capture</string>
    <string name="fft_name">FFT Capture</string>
    <string name="effect_attach_off">Attach</string>
    <string name="effect_attach_on">Detach</string>
    <string name="send_level_name">Send Level</string>
    <string name="Sort">Ignore "The"/"A" while sorting</string>

    <!-- MainActivity -->
    <string name="tab_Settings">Settings</string>
    <string name="tab_Genres">Genres</string>
    <string name="tab_Playlists">Playlists</string>
    <string name="tab_Songs">Songs</string>
    <string name="tab_Artists">Artists</string>
    <string name="tab_Albums">Albums</string>
    <string name="tab_My_Files">My Files</string>

    <!-- F_Settings -->

    <string name="setting_sleep_timer">Sleep Timer</string>
    <string name="setting_not_set">Not set</string>
    <string name="set_time">Set</string>
    <string name="setting_cross_fading">Cross Fading</string>
    <string name="setting_rescan_lib">Rescan Library</string>
    <string name="setting_choose_folder">Choose Folders</string>
    <string name="setting_choose_background">Choose Background</string>
    <string name="setting_auto_download_album_art">Auto Download Album Art</string>
    <string name="setting_theme">Themes</string>
    <string name="setting_choose_album">Choose Album</string>
    <string name="setting_choose_color">Choose Color</string>
    <string name="setting_choose_font">Choose Font</string>
    <string name="setting_request_feature">Request a feature</string>
    <string name="setting_report_bug">Report a bug</string>
    <string name="setting_remove_ads">Remove ads</string>
    <string name="setting_donate">Donate</string>
    <string name="setting_legal">Legal</string>
    <string name="setting_share">Share the app</string>
    <string name="duration_filter">Duration Filter</string>
    <string name="duration_filter_desc">Filter out small audio clips. Set a threshold duration below which  the files will not be displayed.</string>
    <string name="duration">Duration</string>
    <string name="directory">Directory</string>
    <string name="f_total_song">%s songs</string>
    <string name="f_by_artist">%s</string>
    <string name="f_confirm_delete_songs">Are you sure you want to delete %d songs?</string>
    <string name="delete_successful">Deleted successfully</string>
    <string name="now_playing">Player queue</string>
    <string name="create_new">Create new playlist</string>
    <string name="f_song_added_to_queue">%d song(s) was added to the queue</string>
    <string name="f_was_added_to_queue">%s was added to the queue</string>
    <string name="select_an_item_to_add">Please select an item to add to the now playing list</string>
    <string name="select_an_item_to_play">Please select an item to play</string>
    <string name="repeat_one_selected">Repeat-one selected</string>
    <string name="repeat_all_selected">Repeat-all selected</string>
    <string name="no_repeat_selected">No-repeat selected</string>
    <string name="multi_select_initiated">Multi-select initiated</string>
    <string name="playlist_created">Playlist created</string>
    <string name="playlist_name_already_exists">Playlist name already exists</string>
    <string name="an_error_occurred">An error occurred, please try after some time</string>
    <string name="f_total_tracks">Total Tracks: %d</string>
    <string name="f_total_time">Total Time: %s</string>
    <string name="songs_were_added_to_playlist">Songs were added to the playlist</string>
    <string name="no_songs">No Songs</string>
    <string name="delete">Delete</string>
    <string name="f_confirm_delete">Are you sure you want to delete %s?</string>
    <string name="total_songs">Total Songs</string>
    <string name="complete_action_using">Complete action using:</string>
    <string name="song_has_been_sent">Song has been sent!</string>
    <string name="sending_cancel">Sending canceled!</string>
    <string name="shuffle_on">Shuffle on</string>
    <string name="shuffle_off">Shuffle off</string>
    <string name="only_one_song">Only one song in the playlist</string>
    <string name="tags_edited">Tags Edited</string>
    <string name="file_cannot_play">Unable to play this type of audio file</string>
    <string name="play">Play</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="rename">Rename</string>
    <string name="send">Send</string>
    <string name="remove_from_playlist">Remove From Playlist</string>
    <string name="select_playlist">Select Playlist</string>
    <string name="f_song_added_to_the_playlist_named">Song added to the playlist named %s</string>
    <string name="f_was_set_as_ringtone">%s was set as ringtone</string>
    <string name="f_delete_successful">%s deleted successfully</string>
    <string name="f_style">Style %s</string>

    <!-- New text: Aug 30, 2015 -->
    <string name="all_songs">All Songs</string>
    <string name="language">Language</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="new_preset">New Preset</string>
    <string name="bass">Bass</string>
    <string name="vol">Volume</string>
    <string name="virtualizer">Virtualizer</string>
    <string name="equalizer">Equalizer</string>
    <string name="save_as">Save As</string>
    <string name="rename_playlist">Rename Playlist</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="sort2">Sorting by</string>
    <string name="sort_descending">Sort in descending order</string>
    <string name="year">Year</string>
    <string name="date_added">Date added</string>
    <string name="settings_fullscreen">Full screen</string>
    <string name="setting_my_apps">More apps</string>
    <string name="recently_added">Recently Added</string>
    <string name="last_played">Last Played</string>
    <string name="hide_small_clips">Hide Small Clips</string>
    <string name="preset_current">Current</string>
    <string name="preset_normal">Normal</string>
    <string name="preset_dance">Dance</string>
    <string name="preset_classical">Classical</string>
    <string name="preset_folk">Folk</string>
    <string name="preset_flat">Flat</string>
    <string name="preset_heavy_metal">Heavy Metal</string>
    <string name="preset_hip_hop">Hip Hop</string>
    <string name="preset_jazz">Jazz</string>
    <string name="preset_pop">Pop</string>
    <string name="preset_rock">Rock</string>
    <string name="tag_not_edited">Wrong Permission</string>
    <string name="set_as_ringtone">Ringtone Set</string>
    <string name="request_permission">Grant Permission</string>
    <string name="select_sdcard">Please choose SELECT SD CARD from the next window.</string>
    <string name="denied_permission">Permission Denied</string>
    <string name="song_not_deleted">Song Not Deleted</string>
    <string name="track_no">Track No</string>
    <string name="genre">Genre</string>
    <string name="pollfish">pollfish</string>


    <string-array name="tabs">
        <item>@string/tab_Genres</item>
        <item>@string/tab_Playlists</item>
        <item>@string/tab_Songs</item>
        <item>@string/tab_Artists</item>
        <item>@string/tab_Albums</item>
        <item>@string/tab_My_Files</item>
    </string-array>

</resources>