<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dummy1"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <champak.champabun.business.utilities.utilClass.TextViewLobster
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="marquee"
            android:gravity="center"
            android:maxLines="1"
            android:paddingLeft="@dimen/player_settingsSize"
            android:paddingRight="@dimen/player_settingsSize"
            android:paddingTop="20dp"
            android:text="@string/settings"
            android:textSize="@dimen/Heading_Size" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="6dp">

            <RelativeLayout
                android:id="@+id/sleep_timer_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list"
                android:minHeight="?android:attr/listPreferredItemHeight">

                <champak.champabun.business.utilities.utilClass.TextViewGravilar
                    android:id="@+id/sleep_timer_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/lsongs_listview_item_padding_left_right"
                    android:text="@string/setting_not_set" />

                <champak.champabun.business.utilities.utilClass.TextViewGravilight
                    android:id="@+id/sleep_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dip"
                    android:layout_toLeftOf="@+id/sleep_timer_time"
                    android:background="@android:color/transparent"
                    android:text="@string/setting_sleep_timer" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/duration_filter_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:orientation="vertical"
                android:paddingBottom="3dip"
                android:paddingTop="3dip">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <champak.champabun.business.utilities.utilClass.TextViewGravilar
                        android:id="@+id/duration_filter_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/lsongs_listview_item_padding_left_right"
                        android:minHeight="0dip"
                        android:text="@string/setting_not_set" />

                    <champak.champabun.business.utilities.utilClass.TextViewGravilight
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dip"
                        android:layout_toLeftOf="@+id/duration_filter_time"
                        android:background="@android:color/transparent"
                        android:minHeight="0dip"
                        android:text="@string/hide_small_clips" />
                </RelativeLayout>

                <champak.champabun.business.utilities.utilClass.TextViewGravilight
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:background="@android:color/transparent"
                    android:minHeight="0dip"
                    android:text="@string/duration_filter_desc" />
            </LinearLayout>

            <champak.champabun.business.utilities.utilClass.TextViewGravilight
                android:id="@+id/cross_fading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector"
                android:text="@string/setting_cross_fading"
                android:visibility="gone" />

            <champak.champabun.business.utilities.utilClass.TextViewGravilight
                android:id="@+id/rescan_lib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector"
                android:text="@string/setting_rescan_lib"
                android:visibility="gone" />

            <champak.champabun.business.utilities.utilClass.TextViewGravilight
                android:id="@+id/choose_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector"
                android:text="@string/setting_choose_folder"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/choose_background_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:visibility="gone">

                <champak.champabun.business.utilities.utilClass.TextViewGravilar
                    android:id="@+id/choose_background_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/lsongs_listview_item_padding_left_right"
                    android:text="@string/setting_not_set" />

                <champak.champabun.business.utilities.utilClass.TextViewGravilight
                    android:id="@+id/choose_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dip"
                    android:layout_toLeftOf="@+id/choose_background_value"
                    android:background="@android:color/transparent"
                    android:text="@string/setting_choose_background" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/auto_download_album_art"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:addStatesFromChildren="true"
                android:background="@drawable/selector_list"
                android:minHeight="?android:attr/listPreferredItemHeight">

                <CheckBox
                    android:id="@+id/auto_download_album_art_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/lsongs_listview_item_padding_left_right" />

                <champak.champabun.business.utilities.utilClass.TextViewGravilight
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_toLeftOf="@+id/auto_download_album_art_cb"
                    android:text="@string/setting_auto_download_album_art" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/fullscreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:addStatesFromChildren="true"
                android:background="@drawable/selector_list"
                android:minHeight="?android:attr/listPreferredItemHeight">

                <CheckBox
                    android:id="@+id/fullscreen_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/lsongs_listview_item_padding_left_right"
                    android:focusableInTouchMode="false" />

                <champak.champabun.business.utilities.utilClass.TextViewGravilight
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_toLeftOf="@+id/fullscreen_cb"
                    android:text="@string/settings_fullscreen" />
            </RelativeLayout>

            <champak.champabun.business.utilities.utilClass.TextViewGravilar
                android:id="@+id/my_apps"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:background="@drawable/selector_list"
                android:gravity="center_vertical|left"
                android:paddingLeft="@dimen/lsongs_listview_item_padding_left_right"
                android:paddingRight="@dimen/lsongs_listview_item_padding_left_right"
                android:text="@string/setting_my_apps" />

            <champak.champabun.business.utilities.utilClass.TextViewGravilight
                android:id="@+id/request_feature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list"
                android:text="@string/setting_request_feature"
                android:visibility="gone" />

            <champak.champabun.business.utilities.utilClass.TextViewGravilight
                android:id="@+id/report_bug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list"
                android:text="@string/setting_report_bug"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>