<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/dummy1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/transparentblack"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/eqControlLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dip"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top">

                <champak.champabun.business.utilities.utilClass.TextViewLobster
                    android:id="@+id/eqControlText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/equalizer"
                    android:textColor="@color/TextColor_Primary"
                    android:textSize="24sp" />

                <RelativeLayout
                    android:id="@+id/equalizerOnOffwrapping"
                    android:layout_width="@dimen/now_playing_save_asSize"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/eqControlText"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/selector">

                    <Button
                        android:id="@+id/equalizerOnOff"
                        android:layout_width="@dimen/now_playing_save_asSize"
                        android:layout_height="@dimen/now_playing_save_asSize"
                        android:layout_gravity="center_vertical|right"
                        android:layout_weight="0.0"
                        android:background="@drawable/eq"
                        android:clickable="false" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

        <Spinner
            android:id="@+id/saved_preset"
            style="style/SpinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:popupBackground="#b0000000" />

        <LinearLayout
            android:id="@+id/SessionFrame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:paddingTop="55dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/button1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" />

                    <RelativeLayout
                        android:id="@+id/button2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" />

                    <RelativeLayout
                        android:id="@+id/button3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal">

                    <champak.champabun.business.utilities.utilClass.TextViewOstrich
                        android:id="@+id/basstext"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/bass"
                        android:textColor="@color/TextColor_Secondary"
                        android:textSize="21sp" />

                    <champak.champabun.business.utilities.utilClass.TextViewOstrich
                        android:id="@+id/voltext"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Volume"
                        android:textColor="@color/TextColor_Secondary"
                        android:textSize="21sp" />

                    <champak.champabun.business.utilities.utilClass.TextViewOstrich
                        android:id="@+id/virtualizertext"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/virtualizer"
                        android:textColor="@color/TextColor_Secondary"
                        android:textSize="21sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>